# AdventOfCode_2024

./: .gitignore  AoC_Uni.sln  CMakeLists.txt  CMakePresets.json  main.cpp
Common/: CMakeLists.txt  utils.cpp  utils.h
Script/: AoC_Setup.py  cookie_session.txt  download_input.py  requirements.txt
Script/AoCRunner/: Program.cs
Script/template/: template_h.txt  template_main_cpp.txt
day01/: CMakeLists.txt  day01.cpp
day03/: CMakeLists.txt  day03.cpp
day04/: CMakeLists.txt  day04.cpp  day04.h
day05/: CMakeLists.txt  day05.cpp  day05.h
day06/: CMakeLists.txt  day06.cpp  day06.h
day07/: CMakeLists.txt  day07.cpp  day07.h
day08/: CMakeLists.txt  day08.cpp  day08.h
day09/: CMakeLists.txt  day09.cpp  day09.h
day10/: CMakeLists.txt  day10.cpp  day10.h
day11/: CMakeLists.txt  day11.cpp  day11.h
day12/: CMakeLists.txt  day12.cpp  day12.h
day13/: CMakeLists.txt  day13.cpp  day13.h
day14/: CMakeLists.txt  day14.cpp  day14.h  helperClass.cpp  helperClass.h
day15/: CMakeLists.txt  day15.cpp  day15.h
example_answers/: day03.txt  day04.txt
